# geleit

./: .gitignore  CHANGELOG.md  Cargo.toml  GELEITMAIL.md  LICENSE  README.md  constitution.md  deny.toml  design.md  geleit.db  guidelines.md  mail_adresses  roadmap.md  stories.md  test_mail_rendering.eml  vision.md
.cargo/: mutants.toml
.github/workflows/: ci.yml  release.yml
crates/geleit-app/: Cargo.toml  tauri.conf.json
crates/geleit-app/examples/: blitz_select_spike.rs  blitz_spike.rs  live_attachment_uidvalidity.rs  live_backfill_all_folders.rs  live_copy_move_fallback.rs  live_export_attachment.rs  live_offline_move.rs  live_pull_flags.rs  seed_demo.rs  seed_live.rs
crates/geleit-app/src/: backfill.rs  dto.rs  htmlrender.rs  idle.rs  ipc.rs  main.rs  notify.rs  refresh.rs  remoteimg.rs  scheduler.rs  snooze.rs  tray.rs  update.rs  viewmodel.rs
crates/geleit-core/: Cargo.toml
crates/geleit-core/src/: lib.rs
crates/geleit-engine/: Cargo.toml
crates/geleit-engine/src/: envelope.rs  imap.rs  lib.rs  localstore.rs  message.rs  mime.rs  safehtml.rs  smtp.rs  sync.rs  sync_actions.rs  thread.rs
crates/geleit-engine/tests/: smtp_send.rs
crates/geleit-host/: Cargo.toml
crates/geleit-host/src/: commands.rs  dto.rs  lib.rs  shell.rs  snooze.rs
crates/geleit-host/src/worker/: backfill.rs  idle.rs  mod.rs  schedule.rs  scheduler.rs
crates/geleit-platform/: Cargo.toml
crates/geleit-platform/examples/: notify_once.rs
crates/geleit-platform/src/: html.rs  lib.rs  notify.rs  oauth.rs  os_notify.rs  os_secret.rs  secret.rs  tray.rs
crates/geleit-server/: Cargo.toml
crates/geleit-server/src/: auth.rs  dispatch.rs  main.rs  shell.rs
crates/geleit-server/web/: early.js
crates/geleit-shell/: Cargo.toml  tauri.conf.json
crates/geleit-shell/capabilities/: default.json
crates/geleit-shell/src/: dto.rs  ipc.rs  mailproto.rs  main.rs
crates/geleit-store/: Cargo.toml
crates/geleit-store/src/: lib.rs
crates/geleit-ui/: Cargo.toml
crates/geleit-ui/src/: api.rs  app.rs  icons.rs  lib.rs  view.rs
design/Design/: .thumbnail  Email Client Explorations.dc.html
design/design_handoff_geleitmail/: GeleitMail Mobile Prototype.dc.html  GeleitMail Prototype.dc.html  README.md
docs/: security-review.md
docs/adr/: 0001-native-slint-with-sandboxed-webview-for-html.md  0002-ci-on-github-actions.md  0003-workspace-crate-structure.md  0004-platform-abstraction-seams.md  0005-local-store-schema.md  0006-imap-transport-stack.md  0007-slint-licensing.md  0008-encryption-at-rest-sqlcipher.md  0009-smtp-transport-stack.md  0010-search-via-sqlite-fts5.md  0011-html-via-blitz-cpu-rendering.md  0012-tauri-shell-with-leptos-ui.md  0013-auto-update-http-exception.md  0014-host-agnostic-core-and-web-host.md
docs/manual/: README.md  accounts.md  organizing-mail.md  privacy.md  reading-mail.md  searching-mail.md  shortcuts-and-appearance.md  writing-mail.md
docs/technical/: background-sync-and-notifications.md  blitz-shell-spike.md  drafts.md  folder-roles.md  idle.md  oauth-app-registration.md  offline-moves.md  outbox.md  performance-notes.md  s0.2-html-spike-findings.md  s0.3-list-spike-findings.md  s3.1-html-embed-findings.md  tauri-shell.md  tauri-webkit-spike.md  workspace.md
mockups/: soft-daylight.html
packaging/: README.md  geleit.desktop  make-latest-json.sh  package-linux.sh
scripts/: build-ui.sh  check-boundary.sh  perf-budget.sh  sweep.sh
specs/backlog/cross-account-search/: spec.md  tasks.md
specs/backlog/html-crash-fix/: spec.md  tasks.md
specs/backlog/html-crash-fix-2/: spec.md  tasks.md
specs/backlog/html-via-blitz/: spec.md  tasks.md
specs/backlog/inbox-ordering/: spec.md  tasks.md
specs/backlog/render-images/: spec.md  tasks.md
specs/backlog/resizable-splitter/: spec.md  tasks.md
specs/backlog/screenshot-flag/: spec.md  tasks.md
specs/backlog/seen-writeback/: spec.md  tasks.md
specs/backlog/user-manual/: plan.md  spec.md  tasks.md
specs/backlog/webview-cue-and-surfaces/: spec.md  tasks.md
specs/design-overhaul/: plan.md  spec.md  tasks.md
specs/drafts-merged/: spec.md
specs/export-mbox/: spec.md
specs/feature-parity/: spec.md
specs/font-fallback/: spec.md  tasks.md
specs/idle/: spec.md
specs/interactive-html/: spec.md  tasks.md
specs/m0/: spec.md
specs/m0/s0.1-scaffold/: plan.md  spec.md  tasks.md
specs/m0/s0.2-html-spike/: plan.md  spec.md  tasks.md
specs/m0/s0.3-list-spike/: plan.md  spec.md  tasks.md
specs/m0/s0.4-ui-decision/: plan.md  spec.md  tasks.md
specs/m0/s0.5-platform-seams/: plan.md  spec.md  tasks.md
specs/m0/s0.6-oauth-registration/: plan.md  spec.md  tasks.md
specs/m1/s1.1-design-language/: plan.md  spec.md  tasks.md
specs/m1/s1.10-add-account/: plan.md  spec.md  tasks.md
specs/m1/s1.2-supply-chain/: plan.md  spec.md  tasks.md
specs/m1/s1.3-store-schema/: plan.md  spec.md  tasks.md
specs/m1/s1.4-imap-connect/: plan.md  spec.md  tasks.md
specs/m1/s1.5-sync-envelopes/: plan.md  spec.md  tasks.md
specs/m1/s1.6-mime-bodies/: plan.md  spec.md  tasks.md
specs/m1/s1.7-slint-shell/: plan.md  spec.md  tasks.md
specs/m1/s1.8-reading-pane/: plan.md  spec.md  tasks.md
specs/m1/s1.9-refresh/: plan.md  spec.md  tasks.md
specs/m2/s2.1-os-keychain/: plan.md  spec.md  tasks.md
specs/m2/s2.2-encryption-at-rest/: plan.md  spec.md  tasks.md
specs/m2/s2.3-incremental-sync/: plan.md  spec.md  (+1 more)
specs/notifications/: spec.md
specs/offline-moves/: spec.md
specs/outbox/: spec.md
specs/rules/: spec.md
specs/save-open-mail/: plan.md  spec.md  tasks.md
specs/self-update/: spec.md
specs/snooze/: spec.md
specs/special-use/: spec.md
spikes/: README.md
spikes/s0.2-html-render/: Cargo.toml  run-spike.sh
spikes/s0.3-list-render/: Cargo.toml  run-spike.sh
spikes/s3.1-html-embed/: Cargo.toml
spikes/s3.1-html-embed/src/: main.rs
spikes/tauri-reading-pane/: Cargo.toml
spikes/tauri-reading-pane/src/: main.rs
spikes/wasm-coldstart/host/: Cargo.toml
spikes/wasm-coldstart/host/src/: main.rs
spikes/wasm-coldstart/ui/: Cargo.toml
spikes/wasm-coldstart/ui/src/: lib.rs
(+145 files in other folders)
