[workspace]
resolver = "2"
members = [
    "crates/geleit-core",
    "crates/geleit-engine",
    "crates/geleit-app",
]
# Throwaway feasibility spikes are standalone crates, kept out of the workspace so
# `cargo build --workspace`, clippy, and CI never touch them (guidelines §11).
exclude = ["spikes/s0.2-html-render", "spikes/s0.3-list-render"]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.96"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
