[workspace]
resolver = "2"
members = [
    "crates/geleit-core",
    "crates/geleit-platform",
    "crates/geleit-store",
    "crates/geleit-engine",
    "crates/geleit-app",
]
# Throwaway feasibility spikes are standalone crates, kept out of the workspace so
# `cargo build --workspace`, clippy, and CI never touch them (guidelines §11).
exclude = ["spikes/s0.2-html-render", "spikes/s0.3-list-render", "spikes/s3.1-html-embed"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.96"

# Release builds: strip symbols (the binary is ~36M unstripped → ~29M stripped) and thin-LTO for a
# faster, smaller artifact. Keep unwind (workers rely on catch_unwind), so no panic="abort".
[profile.release]
strip = true
lto = "fat"          # maximal cross-crate inlining for a tighter, faster release binary (APP-2)
codegen-units = 1    # trade build time for better optimization + smaller output
# NOTE: deliberately NOT panic = "abort" — worker threads use catch_unwind so a panic in a sync/send
# worker is contained and reported calmly instead of taking down the whole app (P1/guidelines §5).

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
