[workspace]
resolver = "2"
members = [
    "crates/geleit-core",
    "crates/geleit-platform",
    "crates/geleit-store",
    "crates/geleit-engine",
    # geleit-host is the host-agnostic core: AppState + the command logic behind the IPC seam, shared
    # by every host (ADR-0014). geleit-app is the Tauri desktop host; geleit-server is the localhost
    # web host; geleit-ui is the Leptos frontend both serve.
    "crates/geleit-host",
    "crates/geleit-app",
    "crates/geleit-server",
    "crates/geleit-ui",
]
# Throwaway feasibility spikes are standalone crates, kept out of the workspace so
# `cargo build --workspace`, clippy, and CI never touch them (guidelines §11).
exclude = [
    "spikes/s0.2-html-render",
    "spikes/s0.3-list-render",
    "spikes/s3.1-html-embed",
    # M9 / ADR-0012 feasibility spikes: OS-webview rendering + security, and WASM cold-start cost.
    "spikes/tauri-reading-pane",
    "spikes/wasm-coldstart/ui",
    "spikes/wasm-coldstart/host",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.96"

# Release builds: strip symbols (the binary is ~36M unstripped → ~29M stripped) and thin-LTO for a
# faster, smaller artifact. Keep unwind (workers rely on catch_unwind), so no panic="abort".
[profile.release]
strip = true
lto = "fat"          # maximal cross-crate inlining for a tighter, faster release binary (APP-2)
codegen-units = 1    # trade build time for better optimization + smaller output
# NOTE: deliberately NOT panic = "abort" — worker threads use catch_unwind so a panic in a sync/send
# worker is contained and reported calmly instead of taking down the whole app (P1/guidelines §5).

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
