[package]
name = "geleit-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
geleit-store = { path = "../geleit-store" }
geleit-engine = { path = "../geleit-engine" }
geleit-platform = { path = "../geleit-platform" }
# unstable-winit-030 exposes the winit window so a sandboxed wry webview can embed as a child
# (S3.1, ADR-0001). renderer-software lets us render Slint WITHOUT a GL context, so it can't collide
# with the embedded webview's GL (the collision caused GLXBadWindow crashes); selected at runtime.
slint = { version = "1.16.1", features = ["renderer-software"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["rt", "net", "time"] }
getrandom = "0.4.3"
# Pure-Rust, CPU HTML/CSS rendering (no GL) — replaces the webkit webview that caused the GL-on-X11
# crashes. We render sanitized mail HTML to a bitmap + keep the DOM for hit-testing link clicks.
blitz-html = "=0.3.0-alpha.5"
blitz-dom = "=0.3.0-alpha.5"
blitz-paint = "=0.3.0-alpha.5"
blitz-traits = "=0.3.0-alpha.5"
anyrender = "0.11"
anyrender_vello_cpu = "0.14"
peniko = "0.6"
# Opt-in only (PRIV-2): fetch a message's remote images when the user clicks "Load images", to inline
# them for the offline renderer. Minimal blocking HTTP + rustls; the ONLY allowed HTTP client (deny.toml).
ureq = "2"
base64 = "0.22"

[dev-dependencies]
png = "0.17" # for the blitz_spike example only

[features]
# Forwarded to the engine for self-signed dev servers; never enable in a release build.
dangerous-tls = ["geleit-engine/dangerous-tls"]

# The UI crate can't use the workspace `unsafe_code = "forbid"`: Slint's generated code carries
# `#[allow(unsafe_code)]`, and `forbid` cannot be overridden. We `deny` instead — still blocks
# unsafe in our own code (we never `#[allow]` it), but lets the generated UI shim compile.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"
