[package]
name = "geleit-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# The Tauri host (M9, ADR-0012): owns the window, the OS webview, and the typed IPC seam to the
# engine. It replaces `geleit-app` (Slint) at S9.7's teardown; until then both build side by side so
# the shipped app keeps working through the migration.
#
# Note there is NO npm/bundler: the frontend is `geleit-ui` (Rust -> WASM), built by
# `scripts/build-ui.sh` into `dist/`, which Tauri serves as static assets.

[dependencies]
geleit-core = { path = "../geleit-core" }
geleit-store = { path = "../geleit-store" }
geleit-engine = { path = "../geleit-engine" }
geleit-platform = { path = "../geleit-platform" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
# navigation guard: parse + classify URLs (already in the tree via tauri)
url = "2"
# the background sync scheduler: a per-folder async lock + an interval timer. Already in the tree
# (tauri's async runtime IS tokio, and the engine uses it) — these features add no new crate.
tokio = { version = "1", default-features = false, features = ["sync", "time"] }
# The user's local time-of-day, for quiet hours. Already in the tree (tauri pulls it), and getting the
# machine's UTC offset right is not something to hand-roll — it is a database, not a formula.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[features]
# Forwarded to the engine for self-signed dev servers; never enable in a release build.
dangerous-tls = ["geleit-engine/dangerous-tls"]

# Tauri's generated glue carries `#[allow(unsafe_code)]`, and the workspace's `forbid` cannot be
# overridden — so we `deny` here instead. Our own code never allows unsafe.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"
