[package]
name = "geleit-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ammonia = "4"
async-imap = { version = "0.11.2", default-features = false, features = ["runtime-tokio"] }
futures = "0.3.32"
geleit-core = { path = "../geleit-core" }
geleit-platform = { path = "../geleit-platform" }
geleit-store = { path = "../geleit-store" }
lettre = { version = "0.11.22", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }
mail-builder = "0.4.4"
mail-parser = "0.11.3"
pulldown-cmark = { version = "0.13.4", default-features = false, features = ["html"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "logging"] }
rustls-pki-types = "1.14.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "macros", "net", "io-util"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "logging"] }
webpki-roots = "1.0.8"

[features]
# Compiles in the dev-only "accept any server certificate" path (for the local self-signed
# Dovecot). NOT enabled by default, so release/CI builds physically cannot bypass TLS validation.
dangerous-tls = []

[lints]
workspace = true

[dev-dependencies]
proptest = "1.11.0"
