[package]
name = "geleit-platform"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# thiserror adopted in M1/S1.2 (guidelines §4), alongside the supply-chain gate (cargo-deny).

[lints]
workspace = true

[dependencies]
thiserror = "2.0.18"
