[package]
name = "geleit-platform"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# thiserror adopted in M1/S1.2 (guidelines §4), alongside the supply-chain gate (cargo-deny).

[lints]
workspace = true

[dependencies]
# Linux secret-service backend only (pure-Rust zbus, no C deps). macOS/Windows stores are enabled
# at cross-platform packaging (M8) by adding their store features.
keyring = { version = "4", default-features = false, features = [
    "v1",
    "zbus-secret-service-keyring-store",
] }
thiserror = "2.0.18"
