[package]
name = "geleit-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# The localhost web host (ADR-0014). Serves the same Leptos/WASM UI as the desktop shell and exposes
# `geleit-host`'s command logic over HTTP instead of the Tauri IPC bridge. Binds 127.0.0.1 only — no
# auth, because nothing else on the machine can reach it (LAN/TLS is a later, opt-in slice).
[dependencies]
geleit-host = { path = "../geleit-host" }
geleit-platform = { path = "../geleit-platform" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs", "net"] }
# Wrap a broadcast receiver as a Stream for the SSE endpoint (the one push channel to the browser).
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.8"

[features]
# Forwarded to the host/engine for self-signed dev servers (live Dovecot tests); never in release.
dangerous-tls = ["geleit-host/dangerous-tls"]

[lints]
workspace = true
