[package]
name = "geleit-store"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
geleit-core = { path = "../geleit-core" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.18"

[lints]
workspace = true
