[package]
name = "coldstart_ui"
version = "0.0.0"
edition = "2021"
publish = false

# Representative Leptos CSR mail UI, compiled to wasm, purely to MEASURE cold start on the target
# machine (i7-2600 / Sandy Bridge). Not a real UI — just enough structure (3 panes, 300-row reactive
# list, selection signal, derived filter) that the wasm blob and mount cost resemble the real thing.
[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"

# Match a release build's shape so the size/compile numbers are honest.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]
